<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp">

	<TextView
		android:id="@+id/nasakaWeweVersion"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/nasaka_wewe_version"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/torVersion"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/tor_version"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nasakaWeweVersion" />

	<TextView
		android:id="@+id/LinksTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/links"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/TorVersion" />

	<TextView
		android:id="@+id/nasakaWeweWebsite"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/nasaka_wewe_website"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/LinksTitle" />

	<TextView
		android:id="@+id/nasakaWeweSourceCode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/nasaka_wewe_source_code"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nasakaWeweWebsite" />

	<TextView
		android:id="@+id/nasakaWeweChangelog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/nasaka_wewe_changelog"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nasakaWeweSourceCode" />

	<TextView
		android:id="@+id/nasakaWewePrivacyPolicy"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/nasaka_wewe_privacy_policy"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nasakaWeweChangelog" />

	<TextView
		android:id="@+id/TranslatorThanks"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/translator_thanks"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nasakaWewePrivacyPolicy" />

</androidx.constraintlayout.widget.ConstraintLayout>